完善整个项目逻辑，完成代码闭环